TARGET_ADD_SOURCES(gensim-lib
	ByteByByteDecodeGenerator.cpp
	ClangLLVMTranslationGenerator.cpp
	DecodeGenerator.cpp
	DefinitionGenerator.cpp
	DisasmGenerator.cpp
	ExecutionEngineGenerator.cpp
	FunctionalDecodeGenerator.cpp
	GenerationManager.cpp
	InterpretiveExecutionEngineGenerator.cpp
	JumpInfoGenerator.cpp
	MakefileGenerator.cpp
	NullTranslationGenerator.cpp
	TranslationGenerator.cpp
)

ADD_SUBDIRECTORY(BlockJIT)
ADD_SUBDIRECTORY(Captive)
ADD_SUBDIRECTORY(ExecutionEngine)
ADD_SUBDIRECTORY(GenCInterpreter)
ADD_SUBDIRECTORY(GenCJIT)
ADD_SUBDIRECTORY(NaiveJIT)
